--- a/FlaskObjectDetectionEdge/static/style.css
+++ b/FlaskObjectDetectionEdge/static/style.css
@@ -1,3 +1,35 @@
+@font-face {
+  font-family: 'Roboto';
+  font-weight: 400;
+  src: url('./assets/Fonts/Roboto-Black.ttf');
+  font-display: fallback;
+}
+@font-face {
+  font-family: 'Roboto';
+  font-weight: 700;
+  src: url('./assets/Fonts/Roboto-Bold.ttf');
+  font-display: fallback;
+}
+@font-face {
+  font-family: 'Roboto';
+  font-weight: bold;
+  src: url('./assets/Fonts/Roboto-Bold.ttf');
+  font-display: fallback;
+}
+
+@font-face {
+  font-family: 'Roboto';
+  src: url('./assets/Fonts/Roboto-Medium.ttf');
+  /* Cera_Pro_Black */
+  font-weight: 500;
+  font-display: fallback;
+}
+@font-face {
+  font-family: 'Roboto';
+  src: url('./assets/Fonts/Roboto-Bold.ttf');
+  font-weight: 600;
+  font-display: fallback;
+}
 body {
   background: linear-gradient(90deg, #00aaf4 0%, #00c391 52.42%, #00d258 100%);
 }
@@ -72,7 +104,7 @@ video {
   margin: 0px 0px;
 }
 .metrics-section h2 {
-  font-family: OpenSans-Semibold;
+  font-family: 'Roboto';
   font-size: 13px;
   color: #ffffff;
   line-height: 20px;
@@ -80,31 +112,40 @@ video {
   max-height: 64px;
   padding: 25px;
 }
+
 .metric-data {
+  font-family: 'Roboto';
+  font-size: 16px;
+  color: #4f5666;
   text-align: left;
-  color: #ffffff;
-  padding: 10px 5px;
+  padding: 20px;
 }
-.metric-data,
+
 .time-metric {
-  opacity: 0.7;
-  font-family: OpenSans;
-  font-size: 12px;
-  color: #283b7c;
-  text-align: left;
+  /* opacity: 0.7; */
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 19px;
+  color: #444b5c;
 }
-.metric-data .time-lable {
-  font-family: OpenSans-Bold;
-  font-size: 12px;
-  color: #283b7c;
+.time-lable {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 19px;
+  color: #444b5c;
 }
 .time-bold {
-  opacity: 0.7;
-  font-family: OpenSans-Semibold;
-  font-size: 14px;
+  /* opacity: 0.7; */
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 21px;
   color: #283b7c;
-  text-align: center;
-  overflow-wrap: break-word;
 }
 #edgeVideo {
   /* object-fit: cover;
@@ -137,10 +178,12 @@ video {
 }
 .metric-header {
   padding: 0px 5px;
-  opacity: 0.7;
-  font-family: OpenSans;
+  /* opacity: 0.7; */
+  font-family: 'Roboto';
   font-size: 12px;
   color: #ffffff;
+  border-bottom: 1px solid #c6d2e1;
+  padding-bottom: 10px;
 }
 .metrics-conatiner {
   margin: 0 10px;
@@ -186,5 +229,4 @@ video {
   background: #eef6fb;
   border-radius: 10px;
   margin-bottom: 20px;
-  /* left: 8%; */
 }
